# WorkScribe

./: .gitattributes  .gitignore  README.md  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  create_project_model.py  docker-compose.yml  fix_pyproject.py  pages_router_dump.txt  pyproject.toml  requirements.txt  tasks_router_dump.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260221_0704_e4c062ff27cf_create_organizations_table.py  20260221_0707_a54c165357e6_create_users_table.py  20260221_1257_b34dd7423f23_create_org_members_table.py  20260221_1715_7af100f5f209_create_invitations_table.py  20260224_0902_ad065ab15a0b_create_projects_table.py  20260224_1405_748cc8ebec25_create_task_statuses_table.py  20260224_2009_781adcc799be_create_project_task_counters.py  20260224_2017_5e17602e0625_create_tasks_table.py  20260224_2025_ecdf677f44b1_create_labels_table.py  20260224_2027_b8a2eb912e01_create_comments_table.py  20260224_2028_39aa237c8415_create_activity_log_table.py  20260224_2038_0648337901e5_seed_default_task_statuses.py  20260226_0432_b4fb5d09bb90_create_sprints_table.py  20260226_0435_70e071b82b25_add_sprint_id_to_tasks.py  20260226_0600_a1b2c3d4e5f6_create_wiki_spaces_table.py  20260226_0610_b2c3d4e5f6a1_create_pages_table.py  20260226_1000_c3d4e5f6a1b2_create_task_page_links_table.py  20260226_1100_d4e5f6a1b2c3_create_notifications_table.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  rate_limit.py  security.py  websocket.py
backend/app/models/: __init__.py  activity_log.py  base.py  comment.py  invitation.py  label.py  member.py  notification.py  organization.py  project.py  sprint.py  task.py  task_page_link.py  task_status.py  user.py  wiki.py
backend/app/routers/: __init__.py  auth.py  dashboard.py  labels.py  notifications.py  organizations.py  pages.py  projects.py  (+5 more)
backend/docs/: DESIGN.md  PRD.md  PROGRESS.md  TECH_RULES.md  todo.md
backend/tests/: conftest.py  test_isolation.py
(+103 files in other folders)
