[project]
name = "workscribe-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
